sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:13: error: reassignment to val
        i=i+1;
         ^