sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var echanges:Boolean=true;
  var ecart:Int=getValueCount();

  while(echanges==true || ecart>1){
    echanges=false
    ecart = (ecart.toDouble / 1.3).toInt
    for(i<-0 to getValueCount()-1){
    	if (isSmaller(i+ecart,i)){
        echanges=true;
      	swap(i,i+ecart);
        i=i+1;
    	}
  	}
	}
}